# FFXLuaScriptLoader

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  README_PLUGINS.md  build.bat  ff8_hook.cpp  generate_compile_commands.ps1  test_log.txt
app_hook/: CMakeLists.txt  README.md
app_hook/include/config/: config_base.hpp  config_factory.hpp  config_loader.hpp  copy_memory_loader.hpp  memory_config.hpp  patch_config.hpp  patch_loader.hpp  task_loader.hpp
app_hook/include/context/: mod_context.hpp
app_hook/include/hook/: hook_factory.hpp  hook_manager.hpp
app_hook/include/memory/: copy_memory.hpp  patch_memory.hpp
app_hook/include/task/: hook_task.hpp
app_hook/include/util/: logger.hpp  task_manager.hpp
app_hook/src/: dllmain.cpp
app_hook/src/config/: config_factory.cpp  config_loader.cpp  copy_memory_loader.cpp  patch_loader.cpp  task_loader.cpp
app_hook/src/hook/: hook_factory.cpp
app_hook/src/memory/: copy_memory.cpp  patch_memory.cpp
app_hook/src/util/: task_manager.cpp
config/: magic_patch.toml  memory_config.toml  tasks.toml
config/tasks/: memory_config.toml
config_ff8/: tasks.toml
config_ff8/tasks/: copy_magic_memory_config.toml  copy_magic_text_memory_config.toml  load_new_magic.toml  load_new_magic_text.toml  magic_patch.toml  magic_text_patch.toml
core_hook/: CMakeLists.txt
core_hook/include/config/: config_base.hpp  config_common.hpp  config_factory.hpp  config_loader.hpp  config_loader_base.hpp  task_loader.hpp
core_hook/include/context/: mod_context.hpp
core_hook/include/hook/: hook_factory.hpp  hook_manager.hpp
core_hook/include/plugin/: plugin_interface.hpp  plugin_manager.hpp
core_hook/include/task/: hook_task.hpp  task_factory.hpp
core_hook/include/util/: logger.hpp  task_manager.hpp
core_hook/src/config/: config_factory.cpp  task_loader.cpp
core_hook/src/context/: mod_context.cpp
core_hook/src/hook/: hook_factory.cpp  hook_manager.cpp
core_hook/src/plugin/: plugin_manager.cpp
core_hook/src/task/: task_factory.cpp
core_hook/src/util/: logger.cpp  task_manager.cpp
docs/: ARCHITECTURE_OVERVIEW.md  CURRENT_PLUGINS.md  EXAMPLE_FF8.md  HOOK_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INJECTOR_USAGE.md  NEW_TASK_DEVELOPMENT.md  PLUGIN_DEVELOPMENT.md  README_patch_memory_usage.md  USAGE_GUIDE.md
ff8_hook/: CMakeLists.txt  README.md
ff8_hook/include/config/: config_base.hpp  config_common.hpp  config_factory.hpp  config_loader.hpp  copy_memory_loader.hpp  memory_config.hpp  patch_config.hpp  patch_loader.hpp  task_loader.hpp
ff8_hook/include/context/: mod_context.hpp
ff8_hook/include/hook/: hook_factory.hpp  hook_manager.hpp
ff8_hook/include/memory/: copy_memory.hpp  patch_memory.hpp
ff8_hook/include/task/: hook_task.hpp
ff8_hook/include/util/: logger.hpp  task_manager.hpp
ff8_hook/src/: dllmain.cpp
ff8_hook/src/config/: config_factory.cpp  config_loader.cpp  copy_memory_loader.cpp  patch_loader.cpp  task_loader.cpp
ff8_hook/src/context/: mod_context.cpp
ff8_hook/src/hook/: hook_factory.cpp  hook_manager.cpp
ff8_hook/src/memory/: copy_memory.cpp  patch_memory.cpp
ff8_hook/src/util/: task_manager.cpp
injector/: CMakeLists.txt
injector/src/: injector.cpp
integration-test/: CMakeLists.txt  INTEGRATION_TEST_HOWTO.md  README.md  run_test.bat
integration-test/config/: test_config.toml
integration-test/test_app/: main.cpp
integration-test/test_plugin/src/: test_plugin.cpp
memory_plugin/: CMakeLists.txt
memory_plugin/include/: memory_config_loader.hpp
memory_plugin/include/config/: copy_memory_loader.hpp  load_in_memory_config.hpp  load_in_memory_config_loader.hpp  memory_config.hpp  memory_config_loader.hpp  patch_config.hpp  patch_config_loader.hpp  patch_loader.hpp
memory_plugin/include/memory/: copy_memory.hpp  load_in_memory.hpp  memory_region.hpp  patch_memory.hpp
memory_plugin/src/: copy_memory.cpp  copy_memory_loader.cpp  load_in_memory.cpp  load_in_memory_config_loader.cpp  memory_config_loader.cpp  memory_plugin.cpp  patch_config_loader.cpp  patch_loader.cpp  patch_memory.cpp
script/: generate_compile_commands.ps1  ida_usage_memory.csv  patch_memory_usage.py
tests/: CMakeLists.txt  main.cpp  mock_plugin_host.cpp  mock_plugin_host.hpp  test_config_base.cpp  test_config_factory.cpp  test_copy_memory.cpp  test_hook_factory.cpp  test_hook_task.cpp  test_load_in_memory_config.cpp  test_load_in_memory_config_loader.cpp  test_load_in_memory_task.cpp  test_logger.cpp  test_main.cpp  test_memory_configs.cpp  test_memory_region.cpp  test_mod_context.cpp  test_patch_memory.cpp  test_plugin_manager.cpp  test_task_manager.cpp
